[tool.poetry]
name = "tron中文文档"
version = "0.1.0"
description = ""
authors = ["SychO <vbdd@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-gitbook = "^0.0.1"
mkdocs-bootstrap = "^1.1.1"
mkdocs-material = "^9.5.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
